@@ -2,7 +2,10 @@ package eSTAR::IO::Server;
 
 require 5.005_62;
 use strict;
+use vars qw($VERSION);
 use warnings;
+use Carp;
+use AutoLoader qw(AUTOLOAD);
 
 require Exporter;
 require DynaLoader;
@@ -13,7 +16,7 @@ our %EXPORT_TAGS = ( 'all' => [ qw( ) ] );
 our @EXPORT_OK = ( @{ $EXPORT_TAGS{'all'} } );
 
 our @EXPORT = qw( );
-our $VERSION = '0.01';
+'$Revision: 1.2 $ ' =~ /.*:\s(.*)\s\$/ && ($VERSION = $1);
 
 bootstrap eSTAR::IO::Server $VERSION;
 
