@@ -1,2 +1,1 @@
 globus_io_handle_t *    T_PTROBJ
-message_array * T_OPAQUEARRAY
